--- a/appjedrez/src/app/components/aplicacion/inscripcion-org/inscripcion-org.component.html
+++ b/appjedrez/src/app/components/aplicacion/inscripcion-org/inscripcion-org.component.html
@@ -4,17 +4,32 @@
       <div class="col-12 bg-light rounded mt-2 p-5 text-dark">
         <p class="lead">
           Si te interesa ser parte del programa de organizadores, debes seguir
-          los siguientes pasos. Primero, debes enviar la solicitud de
-          inscripción. Segundo, debes esperar a que uno de los administradores
-          revise tu solicitud y la apruebe o rechace. Tercero, si tu solicitud
-          es aceptada, [RELLENAR ESTA PARTE]. Una vez que cumplas con estos
-          requisitos, podrás acceder a la sección de NUEVO para crear un torneo.
+          los siguientes pasos.
+        </p>
+        <ol>
+          <li class="lead">
+            Primero, debes enviar la solicitud de inscripción.
+          </li>
+          <li class="lead">
+            Segundo, debes esperar a que uno de los administradores revise tu
+            solicitud y la apruebe o rechace.
+          </li>
+          <li class="lead">
+            Tercero, si tu solicitud es aceptada, deberás realizar un pago
+            único.
+          </li>
+        </ol>
+        <p class="lead">
+          Una vez que cumplas con estos requisitos, podrás acceder a la sección
+          de NUEVO para crear un torneo.
         </p>
       </div>
       <div class="row mt-2">
         <div class="col-8"></div>
         <div class="col-4">
-          <button class="btn btn-primary w-100" (click)="inscribir()">Quiero ser organizador</button>
+          <button class="btn btn-primary w-100" (click)="inscribir()">
+            Quiero ser organizador
+          </button>
         </div>
       </div>
     </div>
