--- a/appjedrez/src/app/components/torneo/detalles/detalles-torneo/detalles-torneo.component.html
+++ b/appjedrez/src/app/components/torneo/detalles/detalles-torneo/detalles-torneo.component.html
@@ -12,7 +12,7 @@
               background-position: center;
               height: 300px;
             "
-            [ngStyle]="{ 'background-image': 'url(' + imgUrl + ')' }"
+            [ngStyle]="{ 'background-image': imgUrl }"
           ></div>
           <div *ngIf="esOrganizador" class="container-fluid">
             <div
