--- a/appjedrez/src/app/components/torneo/detalles/rondas/rondas.component.html
+++ b/appjedrez/src/app/components/torneo/detalles/rondas/rondas.component.html
@@ -96,6 +96,8 @@
               class="form-select"
               type="date"
               formControlName="fecha"
+              [min]="torneo.fechaInicio"
+              [max]="torneo.fechaFinal"
             />
             <small
               *ngIf="
