--- a/appjedrez/src/app/components/torneo/modificar-torneo/modificar-torneo.component.html
+++ b/appjedrez/src/app/components/torneo/modificar-torneo/modificar-torneo.component.html
@@ -159,6 +159,20 @@
             </div>
           </div>
 
+          <div class="row pt-3">
+            <div class="col-12">
+              <label for="fileInput" class="form-label"
+                >Imagen de portada:</label
+              >
+              <input
+                id="fileInput"
+                type="file"
+                class="form-control"
+                (change)="onArchivoSeleccionado($event)"
+              />
+            </div>
+          </div>
+
           <div class="row pt-3 justify-content-center">
             <div class="col-4">
               <button
