--- a/appjedrez/src/app/components/user/dash/config-organizadores/config-organizadores.component.html
+++ b/appjedrez/src/app/components/user/dash/config-organizadores/config-organizadores.component.html
@@ -1,18 +1,11 @@
 <div class="container-fluid mt-2">
   <div class="container px-5">
-    <div class="row gx-0">
-      <div class="col-md-4">
-        <div class="row mx-1 gx-1 gy-2">
-          <div class="col-12">
-            <div class="rounded bg-light p-5"></div>
-          </div>
-        </div>
-      </div>
+    <div class="row gx-0 justify-content-center">
       <div class="col-md-8">
         <div class="row mx-1 gx-1 gy-1">
           <div class="col-12">
-            <div class="bg-light rounded py-2">
-              <h3>Solicitudes de organizadores</h3>
+            <div class="bg-light rounded p-2">
+              <h3 class="display-6">Solicitudes de organizadores</h3>
             </div>
           </div>
           <div *ngFor="let ins of inscripciones" class="col-12">
@@ -23,20 +16,26 @@
                   {{ ins.idUsuarioNavigation.apellido }}
                 </div>
                 <div class="col-1">
-                  <button class="btn btn-primary btn-sm rounded-circle" (click)="irAPerfil(ins.idUsuario)">
+                  <button
+                    class="btn btn-primary btn-sm rounded-circle"
+                    (click)="irAPerfil(ins.idUsuario)"
+                  >
                     <i class="bi bi-caret-right-fill"></i>
                   </button>
                 </div>
                 <div class="col-1">
                   <button
-                    class="btn btn-success btn-sm rounded-circle text-light" (click)="aprobarInscripcion(ins)"
+                    [disabled]="ins.estadoPedido == 'aprobado'"
+                    class="btn btn-success btn-sm rounded-circle text-light"
+                    (click)="aprobarInscripcion(ins)"
                   >
                     <i class="bi bi-check"></i>
                   </button>
                 </div>
                 <div class="col-1">
                   <button
-                    class="btn btn-danger btn-sm rounded-circle text-light" (click)="rechazarInscripcion(ins)"
+                    class="btn btn-danger btn-sm rounded-circle text-light"
+                    (click)="rechazarInscripcion(ins)"
                   >
                     <i class="bi bi-trash"></i>
                   </button>
