--- a/appjedrez/src/app/components/user/dash/dashboard/dashboard.component.html
+++ b/appjedrez/src/app/components/user/dash/dashboard/dashboard.component.html
@@ -1,4 +1,8 @@
-<body *ngIf="role !== 'Administrador'" class="bg-dark" style="min-height: 100vh">
+<body
+  *ngIf="role !== 'Administrador'"
+  class="bg-dark"
+  style="min-height: 100vh"
+>
   <app-navbar></app-navbar>
   <div class="container-fluid bg-secondary p-5">
     <div class="container px-5">
@@ -6,7 +10,7 @@
         <div class="col-sm-2">
           <img
             class="rounded img-fluid"
-            src="https://via.placeholder.com/100x100"
+            [src]="imgUrl"
           />
         </div>
         <div class="d-flex col-sm-3 align-items-center text-light">
@@ -38,6 +42,15 @@
               [routerLink]="['/user/dashboard/partidas']"
               routerLinkActive="active"
               >Partidas</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="btn btn-secondary"
+              [routerLink]="['/user/dashboard/torneos']"
+              routerLinkActive="active"
+              *ngIf="role == 'Organizador'"
+              >Torneos</a
             >
           </li>
           <li class="nav-item">
