--- a/appjedrez/src/app/components/inicio/inicio.component.html
+++ b/appjedrez/src/app/components/inicio/inicio.component.html
@@ -14,7 +14,7 @@
       <div class="text-white col-4 text-center">
         <h1>Torneos de ajedrez</h1>
         <h3 class="lead">
-          Unite a toneos, organiza tu propio torneo y visualiza partidas
+          Unite a torneos, organizá tu propio torneo y visualizá partidas
         </h3>
         <button class="btn btn-primary btn-lg" (click)="entrar()">
           ENTRAR
