--- a/appjedrez/src/app/components/torneo/registro-torneo/registro-torneo.component.html
+++ b/appjedrez/src/app/components/torneo/registro-torneo/registro-torneo.component.html
@@ -66,6 +66,7 @@
                 formControlName="fechaInicio"
                 class="form-control"
                 type="date"
+                [min]="getToday()"
               />
             </div>
             <div class="col-md-6 d-flex flex-column align-items-center">
@@ -76,6 +77,7 @@
                 formControlName="fechaFinal"
                 class="form-control"
                 type="date"
+                [min]="getToday()"
               />
             </div>
           </div>
