--- a/appjedrez/src/app/components/extra/faq/faq.component.html
+++ b/appjedrez/src/app/components/extra/faq/faq.component.html
@@ -4,7 +4,7 @@
       <div class="col-1">
         <button
           class="btn btn-primary btn-large rounded-circle"
-          [routerLink]="['/inicio']"
+          [routerLink]="['/home']"
         >
           <i class="bi bi-house"></i>
         </button>
