--- a/appjedrez/src/app/components/user/dash/resumen/resumen.component.html
+++ b/appjedrez/src/app/components/user/dash/resumen/resumen.component.html
@@ -33,8 +33,26 @@
     </div>
     <!-- Columna Derecha -->
     <div class="col-lg-4">
+      <div class="row my-2">
+        <div class="col-12">
+          <ngb-pagination
+            [collectionSize]="torneos.length"
+            [pageSize]="pageSize"
+            (pageChange)="changeList($event)"
+            [maxSize]="5"
+            [rotate]="true"
+            [boundaryLinks]="false"
+          />
+        </div>
+      </div>
       <div class="row mx-1 gx-1 gy-2">
-        <div class="col-12" *ngFor="let torneo of torneos">
+        <div
+          class="col-12"
+          *ngFor="
+            let torneo of torneos
+              | slice : (page - 1) * pageSize : page * pageSize
+          "
+        >
           <div class="rounded bg-light p-3">
             <div class="row">
               <div class="col-7 border-end">
@@ -52,10 +70,7 @@
                       >Organizador:
                       <a
                         class="text-link"
-                        [routerLink]="[
-                          '/user/perfil',
-                          torneo.torneo.idOrganizador
-                        ]"
+                        (click)="irPerfil(torneo.torneo.idOrganizador)"
                         >{{
                           torneo.torneo.idOrganizadorNavigation.nombreUsuario
                         }}</a
