--- a/appjedrez/src/app/components/user/dash/torneos-organizador/torneos-organizador.component.html
+++ b/appjedrez/src/app/components/user/dash/torneos-organizador/torneos-organizador.component.html
@@ -31,8 +31,22 @@
         </div>
       </div>
     </div>
+
     <!-- Columna Derecha -->
+    <!-- paginacion -->
     <div class="col-lg-4">
+      <div class="row my-2">
+        <div class="col-12">
+          <ngb-pagination
+            [collectionSize]="torneos.length"
+            [pageSize]="pageSize"
+            (pageChange)="changeList($event)"
+            [maxSize]="5"
+            [rotate]="true"
+            [boundaryLinks]="false"
+          />
+        </div>
+      </div>
       <div class="row mx-1 gx-1 gy-2">
         <div class="col-12" *ngFor="let torneo of torneos">
           <div class="rounded bg-light p-3">
