--- a/appjedrez/src/app/shared/shared-module/navbar/navbar.component.html
+++ b/appjedrez/src/app/shared/shared-module/navbar/navbar.component.html
@@ -25,7 +25,7 @@
         <li class="nav-item">
           <a
             class="nav-link"
-            [routerLink]="['/inicio']"
+            [routerLink]="['/home']"
             routerLinkActive="active"
           >
             <i class="bi bi-house"></i>
@@ -56,7 +56,9 @@
           >
         </li>
       </ul>
-      <div class="d-flex p-1">
+    </div>
+    <div class="d-flex">
+      <div class="p-1">
         <a
           class="btn btn-outline-light rounded-circle"
           role="button"
@@ -64,7 +66,7 @@
           ><i class="bi bi-person-circle"></i
         ></a>
       </div>
-      <div class="d-flex p-1">
+      <div class="p-1">
         <a
           class="btn btn-outline-light rounded-circle position-relative"
           data-bs-toggle="offcanvas"
@@ -101,6 +103,13 @@
   </div>
   <div class="offcanvas-body">
     <div
+      *ngIf="notificaciones.length == 0"
+      class="alert alert-success d-flex align-items-center"
+      role="alert"
+    >
+      <div class="col-10">No hay notificaciones nuevas</div>
+    </div>
+    <div
       *ngFor="let notificacion of notificaciones"
       class="alert alert-info d-flex align-items-center"
       role="alert"
@@ -108,9 +117,17 @@
       <div class="col-10">
         {{ this.notificacion.mensaje }}
       </div>
-      <div class="col-2">
+      <div class="col-1">
         <button class="btn btn-outline-info rounded-circle">
           <i class="bi bi-check" (click)="marcarLeida(notificacion)"></i>
+        </button>
+      </div>
+      <div class="col-1">
+        <button class="btn btn-outline-primary rounded-circle">
+          <i
+            class="bi bi-caret-right-fill"
+            (click)="irTorneo(notificacion)"
+          ></i>
         </button>
       </div>
     </div>
