--- a/appjedrez/src/app/components/extra/faq/faq.component.html
+++ b/appjedrez/src/app/components/extra/faq/faq.component.html
@@ -21,7 +21,7 @@
       <h5>¿Cómo creo mi clave?</h5>
       <p>Para crear tu clave, debes seguir estos pasos:</p>
       <ol>
-        <li>Ingresa al sitio web de Appjedrez.</li>
+        <li>Ingresa al sitio web de ChessTourney.</li>
         <li>
           Haz clic en el botón "Registrarse" en la pantalla de Inicio de Sesión.
         </li>
@@ -62,19 +62,13 @@
       </p>
       <h5>¿Tienes alguna duda o quieres comunicarte con nosotros?</h5>
       <p>
-        Si tienes alguna duda o quieres comunicarte con nosotros, puedes hacerlo
-        de varias formas. Puedes enviarnos un correo electrónico a
-        112714@tecnicatura.frc.utn.edu.ar, donde te responderemos lo antes
-        posible. También puedes contactarnos en nuestra página de twitter
-        "@usuarioTwitter", de lunes a viernes de 9 a 18 horas. O si lo
-        prefieres, puedes rellenar el formulario de contacto que encontrarás en
-        nuestra página web www.torneosdeajedrez.com. Estaremos encantados de
-        atenderte y resolver tus consultas sobre nuestros servicios de gestión
-        de torneos de ajedrez.
+        Si tienes alguna duda o quieres comunicarte con nosotros, puedes
+        enviarnos un correo electrónico a 112714@tecnicatura.frc.utn.edu.ar,
+        donde te responderemos lo antes posible.
       </p>
-      <h5>¿Cómo funciona Appjedrez?</h5>
+      <h5>¿Cómo funciona ChessTourney?</h5>
       <p>
-        Appjedrez es una aplicación web que te permite organizar y participar en
+        ChessTourney es una aplicación web que te permite organizar y participar en
         torneos de ajedrez online de forma fácil y rápida. Si quieres organizar
         un torneo, debes solicitar el rol de organizador y crear tu propio
         evento con las características que prefieras: formato, ritmo, fecha,
@@ -85,7 +79,7 @@
         Si quieres participar en un torneo, solo tienes que buscar los eventos
         disponibles en la página principal y elegir el que más te guste. Una vez
         que te inscribas, recibirás una confirmación y podrás acceder al torneo
-        cuando empiece. Appjedrez se encarga de mostrar los resultados y las
+        cuando empiece. ChessTourney se encarga de mostrar los resultados y las
         clasificaciones, y comunicar las incidencias.
       </p>
       <h5>¿Qué necesito para ser organizador?</h5>
@@ -126,8 +120,7 @@
         Estos datos nos permiten ofrecer un servicio personalizado y adaptado a
         las necesidades de cada usuario, así como mejorar la calidad y seguridad
         de nuestro sitio web. No compartimos estos datos con terceros sin el
-        consentimiento expreso del usuario. Para más información, consulte
-        nuestra política de privacidad.
+        consentimiento expreso del usuario.
       </p>
       <h5>¿Qué medios de pago aceptan?</h5>
       <p>
