--- a/appjedrez/src/app/components/extra/terminos-condiciones/terminos-condiciones.component.html
+++ b/appjedrez/src/app/components/extra/terminos-condiciones/terminos-condiciones.component.html
@@ -19,13 +19,13 @@
   <div class="row justify-content-center">
     <div class="col-10">
       <p>
-        Bienvenido a <strong>Appjedrez</strong> proporcionado por ___ (la
-        "Compañía", "nosotros" o "nos"). Nos complace ofrecerle acceso al
-        Servicio (como se define más abajo), sujeto a estos términos y
+        Bienvenido a la aplicación web <strong>ChessTourney</strong> proporcionada por
+        ChessTourney (la "Compañía", "nosotros" o "nos"). Nos complace ofrecerle
+        acceso al Servicio (como se define más abajo), sujeto a estos términos y
         condiciones (los "Términos de Servicio") y a la Política de Privacidad
         correspondiente de nos. Al acceder y utilizar el Servicio, usted expresa
         su consentimiento, acuerdo y entendimiento de los Términos de Servicio y
-        la Política dePrivacidad. Si no está de acuerdo con los Términos de
+        la Política de Privacidad. Si no está de acuerdo con los Términos de
         Servicio o la Política de Privacidad, no utilice el Servicio.
       </p>
       <p>
@@ -34,7 +34,7 @@
         se habiliten en el futuro y en los términos y condiciones que a
         continuación se detallan:
       </p>
-      <h5>Operaciones habilitadas</h5>
+      <h4>Operaciones habilitadas</h4>
       <p>
         Las operaciones habilitadas son aquellas que estarán disponibles para
         los clientes, quienes deberán cumplir los requisitos que se encuentren
@@ -45,24 +45,27 @@
       </p>
       <h5>Transacciones</h5>
       <p>
-        En ningún caso debe entenderse que la solicitud de un producto o
-        servicio implica obligación alguna para el Acceso y uso del Servicio.
-        Para operar el Servicio se requerirá siempre que se trate de clientes de
-        Appjedrez, quienes podrán acceder mediante cualquier dispositivo con
-        conexión a la Red Internet. El cliente deberá proporcionar el número de
-        documento de identidad y la clave personal, que será provista por la
-        aplicación como requisito previo a la primera operación, en la forma que
-        le sea requerida. La clave personal y todo o cualquier otro mecanismo
-        adicional de autenticación personal provisto por el Banco tiene el
-        carácter de secreto e intransferible,y por lo tanto asumo las
-        consecuencias de su divulgación a terceros, liberando a Appjedrez de
-        toda responsabilidad que de ello se derive. En ningún caso Appjedrez
-        requerirá que le suministre la totalidad de los datos, ni enviará mail
-        requiriendo información personal alguna.
+        Todas las transacciones realizadas en nuestra aplicación se gestionan a
+        través de Mercado Pago, un servicio de pago en línea seguro y confiable.
+        Para utilizar este servicio, los usuarios deben registrarse y aceptar
+        los Términos y Condiciones de Mercado Pago. Los pagos se procesan de
+        manera segura y eficiente a través del servicio mencionado, y los fondos
+        se entregan, aplican y retiran de acuerdo con las políticas de Mercado
+        Pago. Al utilizar nuestra aplicación, los usuarios aceptan cumplir con
+        todas las responsabilidades y obligaciones descritas en los
+        <a
+          href="https://www.mercadopago.com.ar/ayuda/terminos-condiciones-uso_299"
+          target="”_blank”"
+          >Términos y Condiciones de Mercado Pago.</a
+        >
+      </p>
+      <p>
+        Nosotros no nos hacemos responsables de los errores ocurridos durante la
+        transaccion debido a fallos del servicio de Mercado Pago
       </p>
       <h5>Costo del Servicio</h5>
       <p>
-        La empresa Appjedrez podrá cobrar comisiones por el mantenimiento y/o
+        La empresa ChessTourney podrá cobrar comisiones por el mantenimiento y/o
         uso de este Servicio o los que en el futuro implemente, entendiéndose
         facultado expresamente para efectuar los correspondientes débitos en mis
         cuentas, aún en descubierto, por lo que presto para ello mi expresa
@@ -75,10 +78,10 @@
         en forma inmediata, sin otra responsabilidad que la derivada de los
         gastos originados hasta ese momento. Si el cliente incumpliera
         cualquiera de las obligaciones asumidas en su relación contractual con
-        empresa XXXX, o de los presentes Términos y Condiciones, elBanco podrá
+        ChessTourney, o de los presentes Términos y Condiciones, el Banco podrá
         decretar la caducidad del presente Servicio en forma inmediata, sin que
-        ello genere derecho a indemnización o compensación alguna. empresa XXX
-        podrá dejarsin efecto la relación que surja de la presente, con un
+        ello genere derecho a indemnización o compensación alguna. ChessTourney
+        podrá dejar sin efecto la relación que surja de la presente, con un
         preaviso mínimo de 60 días, sin otra responsabilidad
       </p>
       <h5>Validez de operaciones y notificaciones</h5>
@@ -98,13 +101,11 @@
       </p>
       <h5>Privacidad de la información</h5>
       <p>
-        Para utilizar los Servicios ofrecidos por XXXX, los Usuarios deberán
+        Para utilizar los Servicios ofrecidos por ChessTourney, los Usuarios deberán
         facilitar determinados datos de carácter personal. Su información
         personal se procesa y almacena en servidores o medios magnéticos que
         mantienen altos estándares de seguridad y protección tanto física como
-        tecnológica. Para mayor información sobre la privacidad de los Datos
-        Personales y casos en los que será revelada la información personal, se
-        pueden consultar nuestras políticas de privacidad.
+        tecnológica.
       </p>
     </div>
   </div>
