--- a/appjedrez/src/app/components/inicio/inicio.component.html
+++ b/appjedrez/src/app/components/inicio/inicio.component.html
@@ -1,17 +1,19 @@
 <body class="bg-dark" style="min-height: 100vh">
   <div class="container-fluid" style="height: 100%">
     <img
-      class="img-fluid"
-      src="https://images2.alphacoders.com/717/71792.jpg"
+      class="img-fluid portada"
+      src="../../../assets/img/Ajedrez.jpg"
       alt="portada"
     />
+
     <div class="overlay"></div>
     <div
       id="portada"
       class="row d-flex justify-content-center align-items-center"
       style="height: 100vh"
     >
-      <div class="text-white col-4 text-center">
+      <div class="text-white col-5 text-center">
+        <img class="logo rounded-5" src="../../../assets/img/Logo.png" alt="Logo" style="width: 50%" />
         <h1>Torneos de ajedrez</h1>
         <h3 class="lead">
           Unite a torneos, organizá tu propio torneo y visualizá partidas
