Add soporte Email
Soporte para emitir comprobantes de inscripcion por email agregado

--- a/appjedrez/src/app/components/user/login/login.component.html
+++ b/appjedrez/src/app/components/user/login/login.component.html
@@ -58,8 +58,15 @@
               >
                 *Contraseña requerida
               </small>
-              <div class="mt-4">
-                <a id="forget" class="link-primary"> ¿Olvidó su contraseña? </a>
+              <div class="form-inline fr mt-4">
+                <a
+                  id="forget"
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  class="font-weight-bold"
+                >
+                  ¿Olvidó su contraseña?
+                </a>
               </div>
               <button
                 (click)="onLogin()"
@@ -81,3 +88,59 @@
     </div>
   </div>
 </body>
+
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <p class="modal-title" id="exampleModalLabel">
+          <span style="font-size: 25px; font-weight: 700"
+            >¿Olvidaste tu contraseña?</span
+          >
+          <br />
+          <small
+            >Por favor, ingrese su E-mail y le enviaremos un link de
+            reseteo</small
+          >
+        </p>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group pt-3">
+          <div class="input-field">
+            <i class="bi bi-user p-2"></i>
+            <input
+              [(ngModel)]="resetPasswordEmail"
+              (ngModelChange)="checkValidEmail($event)"
+              type="text"
+              placeholder="Email"
+            />
+          </div>
+          <small *ngIf="!resetPasswordEmail" class="text-danger"
+            >*Email es requerido</small
+          >
+          <small *ngIf="!isValidEmail && resetPasswordEmail" class="text-danger"
+            >*Email es inválido</small
+          >
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button id="closeBtn" type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Cerar
+        </button>
+        <button type="button" (click)="confirmToSend()" class="btn btn-primary">Enviar</button>
+      </div>
+    </div>
+  </div>
+</div>
