--- a/appjedrez/src/app/components/torneo/detalles/listado-inscripciones/listado-inscripciones.component.html
+++ b/appjedrez/src/app/components/torneo/detalles/listado-inscripciones/listado-inscripciones.component.html
@@ -22,7 +22,10 @@
           </a>
         </td>
         <td>
-          <a class="btn btn-sm btn-success rounded-pill" (click)="aprobar(inscripcion)">
+          <a
+            class="btn btn-sm btn-success rounded-pill"
+            (click)="aprobar(inscripcion)"
+          >
             <i class="bi bi-check-circle-fill p-1 text-white"></i>
           </a>
         </td>
