--- a/appjedrez/src/app/components/user/dash/resumen/resumen.component.html
+++ b/appjedrez/src/app/components/user/dash/resumen/resumen.component.html
@@ -11,8 +11,10 @@
                 {{ torneoReport.cantidadTorneos }}
               </div>
               <div class="col-12 border py-2 my-2">
-                <strong>Elo promedio:</strong>
-                {{ torneoReport.eloPromedio }}
+                <p>
+                  <strong>Elo promedio de jugadores enfrentados:</strong>
+                  {{ torneoReport.eloPromedio }}
+                </p>
               </div>
               <div class="col-12 border my-2">
                 <canvas
