--- a/appjedrez/src/app/components/user/dash/torneos-organizador/torneos-organizador.component.html
+++ b/appjedrez/src/app/components/user/dash/torneos-organizador/torneos-organizador.component.html
@@ -7,12 +7,14 @@
           <div class="rounded bg-light px-4 py-2">
             <div class="row">
               <div class="col-12 border py-2 my-2">
-                <strong>Torneos:</strong>
+                <strong>Torneos creados:</strong>
                 {{ torneoReport.cantidadTorneos }}
               </div>
               <div class="col-12 border py-2 my-2">
-                <strong>Elo promedio:</strong>
-                {{ torneoReport.eloPromedio }}
+                <p>
+                  <strong>Elo promedio de participantes:</strong>
+                  {{ torneoReport.eloPromedio }}
+                </p>
               </div>
               <div class="col-12 border my-2">
                 <canvas
